# swig-cpp-csharp-example

./: .gitignore  README.md
animalcpp/: CMakeLists.txt  animal.cpp  animal.h  animal.i
dotNetSample/: Program.cs  dotNetSample.csproj
